--- a/index.html
+++ b/index.html
@@ -1,11 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assingment1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css/portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+
+<body class="open-sans">
+
+
+    <header>
+        <nav>
+
+            <div class="logo">
+
+                <img src="image/Group.png" alt="" class="img">
+                <div>
+                    <h2 class="ag-h1">KV</h2>
+
+                    <p>knolodge vault</p>
+                </div>
+
+            </div>
+            <ul class="menu">
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
+
+
+            </ul>
+            <button class="btn"><a href=""></a>Get Early Access</button>
+
+
+        </nav>
+        <section id="bannar">
+
+            <div class="bannar-container">
+
+
+
+
+                <div class="bannar-index">
+                    <img src="image/Group 5.png" alt="">
+                    <p>Early Access Now Open</p>
+                </div>
+
+                <div class="bannar-content">
+                    <h1 class="white">Structured Thinking,</h1>
+                    <h1 class="green">Not Just Note-Taking.</h1>
+
+                    <p>A private space to store notes, links, and learning summaries — designed to <br>
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                    <div class="for-btn">
+                        <button class="btn1"><a href=""></a>Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+                        <p><a href=""></a>See How It Works</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+        </section>
+
+
+
+    </header>
+    <section id="about">
+        <div class="about-conteinar">
+            <div class="section-heading">
+
+                <h2> Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <div class="skill">
+                <div class="skill-card">
+                    <img src="image/icon/Scattered notes.png" alt="">
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="image/icon/Bookmark overload.png" alt="">
+                    <h3>Bookmark overload</h3>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="image/icon/No idea connections.png" alt="">
+                    <h3>No idea connections</h3>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="image/icon/Group 6 (4).png" alt="">
+                    <h3>Forgeg alt="tting what
+                        you learned</h3>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+
+            </div>
+
+
+
+
+    </section>
+    <section id="fram">
+        <div class="fram-1">
+            <div class="img-1">
+                <img src="image/image 7.png" alt="">
+
+
+            </div>
+            <div class="fram-2">
+                <h5>THE SOLUTION</h5>
+                <h2>Your Second Brain,<br>
+                    Structured By Design.</h2>
+                <P class="pp">Personal Knowledge Vault isn't another note-taking app. z <br>
+                    It's a thinking environment where every note,
+                    link,
+                    and summary <br> becomes part of an interconnected web of understanding.</P>
+
+                <div class="menu-1">
+                    <div class="menu"> <img src="image/icon/Vector.png" alt="">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+
+                    <div class="menu">
+                        <img src="image/icon/Vector.png" alt="">
+                        <p>Connect related concepts automatically as you write</p>
+
+                    </div>
+
+                    <div class="menu">
+                        <img src="image/icon/Vector.png" alt="">
+                        <p>Build lasting knowledge through reflection prompts</p>
+                    </div>
+
+                    <div class="menu">
+                        <img src="image/icon/Vector.png" alt="">
+                        <p>Find anything instantly with semantic search</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="last">
+
+
+
+
+
+        <div class="last-1">
+            <div class="last-2">
+
+                <h1>Ready to think more clearly?</h1>
+                <div class="last-p">
+                    <p>JJoin thousands of learners who are building their personal knowledge vaults. <br> Start free, no
+                        credit
+                        card required.</p>
+                </div>
+
+
+            </div>
+            <div class="btn-last1">
+
+                <button class="btn-last"><a href=""></a>Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
+                <p>Free during early access • No credit card needed</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <section class="footer-conteinar">
+            <div class="social">
+
+
+                <div class="logo">
+
+                    <img src="image/Group.png" alt="" class="img">
+                    <div>
+                        <h2 class="ag-h1">KV</h2>
+
+                        <p>knolodge vault</p>
+                    </div>
+
+                </div>
+                <div class="head-last">
+
+
+                    <h4>Social Links</h4>
+
+
+
+
+
+                    <div class="icons">
+
+                        <a href=""><img src="image/icons/fi_145807.png" alt=""></a>
+                        <a href=""><img src="image/icons/fi_5969020 (1).png" alt=""></a>
+                        <a href=""><img src="image/icons/Frame 1171277690.png" alt=""></a>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
+
+            <div class="copy">
+                <p>&copy;2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </section>
+
+
+    </footer>
+
 </body>
+
 </html>
